<resources>
    <!-- Main Activity / Menu -->
    <string name="app_name">Lebonangle</string>
    <string name="categories">Catégories</string>
    <string name="annonces">Annonces</string>
    <string name="annonces_create">Créer une annonce</string>

    <!-- Liste de catégories Activity -->
    <string name="title_activity_categories_list">Liste de catégories</string>
    <string name="categories_id">#15</string>
    <string name="categories_name">Nom de la catégorie</string>


    <!-- Liste d'annonces Activity -->
    <string name="title_activity_adverts_list">Liste d\'Annonces</string>


    <!-- Création d'une annonce activity -->
    <string name="title_activity_advert_create">Création d\'une annonce</string>

    <!-- Détails d'une annonce -->
    <string name="title_activity_advert_details">Détails d\'une annonce</string>

    <!-- GÉNÉRAL ANNONCE -->
    <string name="annonce_titre">Titre : </string>
    <string name="annonce_auteur">Auteur : </string>
    <string name="annonce_mail">E-Mail : </string>
    <string name="annonce_categorie">Catégorie : </string>
    <string name="annonce_prix">Prix : </string>
    <string name="annonce_contenue">Contenue : </string>
    <string name="annonce_published">Date de publication : </string>
    <string name="annonce_photos">Photos : </string>

    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>
    <string name="addPhoto">Photos</string>

</resources>