<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/mainMenuButtonCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"/>

    <Button
        android:id="@+id/mainMenuButtonAnnonces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/annonces"/>

    <Button
        android:id="@+id/mainMenuButtonCreationAnnonce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/annonces_create"/>

  </LinearLayout>